[metadata]
name = maaspower
description = Power controlling webhooks for Canonical MAAS
url = https://github.com/gilesknap/maaspower
author = Giles Knap
author_email = gilesknap@gmail.com
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.8
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src
    
# Specify any package dependencies below.
install_requires =
    flask
    flask-basicauth
    typing-extensions
    pysmartthings
    apischema
    typer
    ruamel.yaml
    jsonschema
    importlib_resources
    selenium
    python-kasa>=0.4.0


[options.extras_require]
# For development tests/docs
dev =
    black>=23.1.0
    isort>5.0
    pytest-cov
    mypy
    typed-ast
    flake8-isort
    sphinx-rtd-theme-github-versions
    pre-commit
    mock
    types-mock

[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
# [options.package_data]
# maaspower =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    maaspower = maaspower.__main__:cli

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
# See https://github.com/PyCQA/pycodestyle/issues/373
    E203, 
# support typing.overload decorator
    F811,
# allow Annotated[typ, some_func("some string")]
    F722 

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=maaspower --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
testpaths =
    tests

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = 
  */_version_git.py
  utils/*
data_file = /tmp/maaspower.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
